@@ -1,5 +1,7 @@
 2006-09-25  Brian Bidulock  <bidulock@openss7.org>
 
+	* acinclude.m4: reordered includes
+
 	* acinclude.m4: added NSL includes to build
 	* nettest_xti.c: added explicit <sys/xti_sctp.h> include
 
